<resources>
    <string name="app_name">Rummi</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_my_games">My Games</string>
    <string name="menu_rules">Game Rules</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="changeTheme">Change Theme</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="sysTheme">Android Theme</string>
    <string name="lightTheme">Light Theme</string>
    <string name="themeAct">Theme Activated</string>
    <string name="exit">Exit</string>
    <string name="login_ok">Login successful</string>
    <string name="logoutOK">Logout successful</string>
    <string name="points">%1$s Points</string>
    <string name="updating">Updating data</string>
    <string name="InternetError">Check your Internet connection</string>
    <string name="ServerError">Remote Server Error</string>
    <string name="profile_image">Profile Image</string>
    <string name="name">Name</string>
    <string name="lastName">LastName</string>
    <string name="nickName">Nickname</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="birthDate">BirthDate</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">save</string>
    <string name="gender">Gender</string>
    <string name="notFound">Nothing Found</string>
    <string name="nameNickName">%1$s %2$s %3$s</string>
    <string name="saved">Saved</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="games">Games</string>
    <string name="active">Active</string>
    <string name="delete">Delete</string>
    <string name="espanol">Español</string>
    <string name="english">English</string>
    <string name="join">Join</string>
    <string name="joinStr">%1$s %2$s</string>
    <string name="wrong_link">Wrong Link</string>
    <string name="already_in_game">Already subscribed to this game</string>
    <string name="search_with_code">Search a game using a game code</string>
    <string name="code">Code</string>
    <string name="search">Search</string>
    <string name="search_game">Search Game</string>
    <string name="privateStr">Private</string>
    <string name="full_draw_games">FullDraw Games</string>
    <string name="speed">Speed</string>
    <string name="max_players">Max players</string>
    <string name="gameCodeInfo">Join Code: %1$s\nJoin URL: https://rummi.theozserver.com/joinGame/%1$s/</string>
    <string name="menu_add_game">Create Game</string>
    <string name="publicStr">Public</string>
    <string name="number_players">Max Players: %1$s</string>
    <string name="full_draw_list">Full draw sets: %1$s</string>
    <string name="speed_game">Speed: %1$s</string>
    <string name="password_repeat">Confirm password</string>
    <string name="register">Register</string>
    <string name="confirm">Confirm</string>
    <string name="resend_code">Resend Code</string>
    <string name="select_table_position">Select table position</string>
    <string name="not_available">Place not available: %1$s</string>
    <string name="position_selected">Position selected</string>
    <string name="start_game">Start Game</string>
    <string name="player">Player</string>
    <string name="share">Share</string>
    <string name="share_desc">Hi!,\n Join me here to play a Rummi game!\n use this code in tha app: %1$s\ or click here\n%2$s</string>
    <string name="leave">Leave</string>
    <string name="leave_game">Leave Game</string>
    <string name="message_leave_game">confirm leave game?</string>
    <string name="left_game">you have left the game</string>
    <string name="waiting_for_player">Waiting for players\n Game code: %1$s</string>
    <string name="loading">Loading…</string>
    <string name="message_start_game">Ready to start the game? no more users can join after the game has started</string>
    <string name="waiting_for_deal">Waiting for %1$s to deal cards</string>
    <string name="your_turn">It is your turn!</string>
    <string name="deal_cards">Deal Cards</string>
    <string name="waiting_for_player_move">Waiting for %1$s to play</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="deck">deck</string>
    <string name="not_your_turn">Not Your Turn</string>
    <string name="already_picked_card">Already Picked a card</string>
    <string name="cannot_pick_discard_drawn">Cannot pick from discard, already drawn</string>
    <string name="pick_card">It\'s your turn\nPick a card</string>
    <string name="discard_card_or_draw">It\'s your turn\nDiscard card or draw</string>
    <string name="pick_discard_card">Pick a card to discard first</string>
    <string name="sort">sort</string>
    <string name="menu">Menu</string>
    <string name="confirm_draw">Confirm Draw</string>
    <string name="draw">Draw</string>
    <string name="add_draw_game">Add game</string>
    <string name="discard_card">It\'s your turn\nDiscard a card</string>
    <string name="pick_draw_card">Pick a card to put in the draw</string>
    <string name="messages">Messages</string>
    <string name="summary_congrats">Congrats! you won this set!</string>
    <string name="summary_lost">Sorry, you lost! %1$s won this set!</string>
    <string name="summary_congrats_game">Congrats! you won the game!</string>
    <string name="summary_lost_game">Sorry, you lost! %1$s won the game!</string>
    <string name="set">Set</string>
    <string name="total">Total</string>
    <string name="message_joker_pos">Select Left or Right for draw the Joker</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="select_side">Select SIde</string>
    <string name="standing">Standings</string>
    <string name="game_info">Game Information</string>
    <string name="desc_game_info">This is the %1$s set\nThe game is%2$s full draw\n\nYou need to draw this games:\n\n%3$s</string>
    <string name="straightN">%1$s Straight</string>
    <string name="toakN">%1$s Three of a kind</string>
    <string name="game_set_info">%1$s%2$s</string>
    <string name="not_upper">NOT</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="fifth">Fifth</string>
    <string name="sixth">Sixth</string>
    <string name="winner_full_draw">Winner Ful Draw</string>
    <string name="winner">Winner</string>
    <string name="touch_preview_close">Touch anywhere in the preview to close it</string>
    <string name="open">Open</string>
    <string name="started">Started</string>
    <string name="ended">Ended</string>
    <string name="picked_card_stack">Picked card from stack</string>
    <string name="picked_card_discard">Picked card from discard</string>
    <string name="spades">Spades</string>
    <string name="hearts">Hearts</string>
    <string name="diamonds">Diamonds</string>
    <string name="clubs">Clubs</string>
    <string name="joker">Joker</string>
    <string name="discarded_card">Discarded a card</string>
    <string name="draw_over_card">draw over a card</string>
    <string name="message_visible">Message are visible now</string>
    <string name="message_hidden">Messages hidden</string>
    <string name="sort_color">Sort by Color</string>
    <string name="sort_number">Sort by Number</string>
    <string name="flow_visible">Game flow message always visible</string>
    <string name="flow_auto_hide">Auto hide Game flow messages</string>
    <string name="notif_turn_game">It\'s your turn to play in game %1$s</string>
    <string name="player_cards">%1$s %2$s</string>
    <string name="cards">Cards: %1$s</string>
    <string name="pick_start">Picked cards placed at %1$s</string>
    <string name="beginnig">Beginning</string>
    <string name="end">End</string>
    <string name="message_hide_game">Game will be hidden in the app</string>
    <string name="hide">Hide</string>
    <string name="won_set">Won the set</string>
    <string name="won_game">Won Game</string>
    <string name="created_game">Created Game</string>
    <string name="joined_game">Joined the game</string>
    <string name="drawn">Drawn the game</string>
    <string name="language">Language</string>
    <string name="full_screen">Full Screen</string>
    <string name="landscape">Horizontal View</string>
    <string name="mute_audios">Mute Audios</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="download">Download</string>
    <string name="settings">Settings</string>
    <string name="in_game_options">In Game Options</string>
    <string name="general_options">General Options</string>
</resources>