<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_menu_new_game"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/menu_add_game" />
    <item
        android:id="@+id/nav_menu_my_games"
        android:icon="@drawable/ic_casino_black_24dp"
        android:title="@string/menu_my_games" />
    <item
        android:id="@+id/nav_menu_search_game"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_game" />
    <item
        android:id="@+id/nav_menu_rules"
        android:icon="@drawable/ic_positions"
        android:title="@string/menu_rules" />
    <item
        android:id="@+id/nav_menu_login"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/menu_login" />
        <item
        android:id="@+id/nav_menu_register"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/register" />
    <item
        android:id="@+id/nav_menu_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/menu_logout"
        android:visible="false" />
</menu>
