<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/table">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:text="@string/general_options"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/settings_lang_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/btn_bg"
        android:padding="10dp"
        android:text="@string/language"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:text="@string/in_game_options"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/settings_full_screen_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/btn_bg"
        android:padding="10dp"
        android:text="@string/full_screen"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/settings_landscape_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/btn_bg"
        android:padding="10dp"
        android:text="@string/landscape"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/settings_mute_audios_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/btn_bg"
        android:padding="10dp"
        android:text="@string/mute_audios"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/settings_mute_notifications_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/btn_bg"
        android:padding="10dp"
        android:text="@string/mute_notifications"
        android:textColor="@color/white"
        android:textSize="24sp" />

</LinearLayout>
