<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/table"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/search_with_code"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextSearchCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:background="@color/white"
            android:textColor="@color/black"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:hint="@string/code"
            android:textColorHint="@color/gray"
            android:autofillHints="@string/code" />

        <TextView
            android:id="@+id/search_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:padding="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loadingSearchGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
